--- a/index.html
+++ b/index.html
@@ -4,39 +4,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <meta name="description" content="Calculate your Moroccan Baccalaureate average with this easy-to-use calculator">
-  
-  <!-- Manifest and Icons -->
-<link rel="icon" href="/moroccan-bac-calculator.png" />
-  
-  <!--
-    Notice the use of %PUBLIC_URL% in the tags above.
-    It will be replaced with the URL of the `public` folder during the build.
-    Only files inside the `public` folder can be referenced from the HTML.
+  <meta name="description" content="Official Moroccan BAC Calculator - Calculate your baccalaureate average">
 
-    Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-    work correctly both with client-side routing and a non-root public URL.
-    Learn how to configure a non-root public URL by running `npm run build`.
-  -->
+  <!-- Primary Meta Tags -->
+  <meta property="og:title" content="Moroccan BAC Calculator">
+  <meta property="og:description" content="Calculate your Moroccan baccalaureate average">
+  <meta property="og:image" content="/moroccan-bac-calculator.png">
+
+  <!-- Favicon with absolute paths -->
+  <link rel="icon" type="image/png" href="/moroccan-bac-calculator.png">
+  <link rel="shortcut icon" href="/moroccan-bac-calculator.png">
+  <link rel="apple-touch-icon" href="/moroccan-bac-calculator.png">
+
   <title>Moroccan BAC Calculator</title>
 </head>
 
 <body>
   <noscript>
-    <strong>You need to enable JavaScript to run this application.</strong>
+    <strong>This application requires JavaScript to function properly.</strong>
   </noscript>
   <div id="root"></div>
-  
-  <!--
-    This HTML file is a template.
-    If you open it directly in the browser, you will see an empty page.
 
-    You can add webfonts, meta tags, or analytics to this file.
-    The build step will place the bundled scripts into the <body> tag.
-
-    To begin the development, run `npm start` or `yarn start`.
-    To create a production bundle, use `npm run build` or `yarn build`.
-  -->
   <script type="module" src="/src/index.jsx"></script>
+
+  <!-- Preload favicon for better performance -->
+  <link rel="preload" href="/moroccan-bac-calculator.png" as="image">
 </body>
 </html>
