--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Moroccan BAC Calculator - Calculate your baccalaureate average">
 
+  <!-- Google AdSense Verification & Ad Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5519788497995326"
+     crossorigin="anonymous"></script>
+  <script async src="https://pages-d.googlespublication.com/pages/js/sdabypoogle.js?file=e=pxb-5517915479934&p=0"
+     crossorigin="anonymous"></script>
+
   <!-- Favicon Configuration -->
   <!-- Standard favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
