✅ Cleaned AdSense code and fixed favicon and SEO

--- a/index.html
+++ b/index.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <meta name="description" content="Moroccan BAC Calculator - Calculate your baccalaureate average">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#000000" />
 
-  <!-- Google AdSense Verification & Ad Code -->
+  <title>Moroccan BAC Calculator 2024 | حساب معدل الباكالوريا المغربية</title>
+  <meta name="description" content="Free online tool to calculate Moroccan BAC average for all streams. احسب معدل الباكالوريا المغربية 2024 لجميع الشعب بدقة فائقة" />
+  <meta name="keywords" content="كيف أحسب معدل الباك, معدل النجاح في الباك المغربي, حساب النقطة الجهوية, حساب معدل الباكالوريا, حساب معدل باكالوريا عن طريق جميع الشعب, حساب معدل الباك, النقطة الوطنية المغربية" />
+
+  <!-- ✅ Google AdSense (Auto Ads only) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5519788497995326"
-     crossorigin="anonymous"></script>
-  <script async src="https://pages-d.googlespublication.com/pages/js/sdabypoogle.js?file=e=pxb-5517915479934&p=0"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 
-  <!-- Favicon Configuration -->
-  <!-- Standard favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <!-- PNG version as fallback -->
-  <link rel="icon" type="image/png" href="/MOROCCAN%20BAC%20CALCULATOR.png.png">
-  <!-- Apple Touch Icon -->
-  <link rel="apple-touch-icon" href="/MOROCCAN%20BAC%20CALCULATOR.png.png">
-  
-  <!-- Preload favicon for better performance -->
-  <link rel="preload" href="/favicon.ico" as="image" type="image/x-icon">
-  <link rel="preload" href="/MOROCCAN%20BAC%20CALCULATOR.png.png" as="image" type="image/png">
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/icon.png" />
 
-  <title>Moroccan BAC Calculator</title>
+  <!-- ✅ Preload -->
+  <link rel="preload" href="/src/index.jsx" as="script" />
+
+  <!-- ✅ Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Moroccan BAC Calculator",
+      "alternateName": "حاسبة معدل الباك المغربية",
+      "url": "https://bacmorocc.me",
+      "description": "Calculate your Moroccan baccalaureate average for all streams | احسب معدل الباكالوريا لجميع الشعب",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "Web",
+      "inLanguage": ["ar", "en"]
+    }
+  </script>
 </head>
 
 <body>
   <noscript>
-    <strong>You need to enable JavaScript to run this calculator.</strong>
+    <strong>You need to enable JavaScript to run this calculator. | يجب تفعيل جافاسكريبت لتشغيل الحاسبة</strong>
   </noscript>
+
   <div id="root"></div>
 
+  <!-- ✅ React App Entry -->
   <script type="module" src="/src/index.jsx"></script>
+
+  <!-- Optional manual ad init (if you add manual ads) -->
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </body>
 </html>
