--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
 
-  <title>Moroccan BAC Calculator 2024 | حساب معدل الباكالوريا المغربية</title>
+  <title>Moroccan BAC Calculator 2025 | حساب معدل الباكالوريا المغربية</title>
   <meta name="description" content="Free online tool to calculate Moroccan BAC average for all streams. احسب معدل الباكالوريا المغربية 2024 لجميع الشعب بدقة فائقة" />
   <meta name="keywords" content="كيف أحسب معدل الباك, معدل النجاح في الباك المغربي, حساب النقطة الجهوية, حساب معدل الباكالوريا, حساب معدل باكالوريا عن طريق جميع الشعب, حساب معدل الباك, النقطة الوطنية المغربية" />
 
